objects/SH2__DSH_Setting__c.object
<CustomObject>
    <fields>
        <fullName>SH2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Backup_Mode__c</fullName>
        <label>Backup Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup All Fields</fullName>
                    <default>true</default>
                    <label>Backup All Fields</label>
                </value>
                <value>
                    <fullName>Select Fields To Backup</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH2__Batch_Scope__c</fullName>
        <label>Batch Scope Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Child_Fields_To_Backup__c</fullName>
        <label>Child Fields To Backup</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Child_Objects_To_Recycle__c</fullName>
        <label>Child Objects To Recycle</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Current_Record_Count__c</fullName>
        <label>Current Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Deletion_Order__c</fullName>
        <label>Deletion Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Fields_To_Backup__c</fullName>
        <label>Fields To Backup</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Hard_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Delete Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Index_Archived_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Index Archived Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Most_Recent_Data_Cleanup__c</fullName>
        <label>Most Recent Data Cleanup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SH2__Notes__c</fullName>
        <label>Notes</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Number_Of_Records__c</fullName>
        <label>Number Of Records Recycled Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Backing Up Child Records</fullName>
                </value>
                <value>
                    <fullName>Calculating Number Of Child Records</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Storage Helper Setting</label>
    <nameField>
        <label>Storage Helper Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Helper Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>